--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <section class="main__intro intro">
             <div class="intro__wrapper">
               <h2 class="intro__title title">Печатные платы</h2>
-              <p class="intro__description description">производство и монтаж, поставка комплектующих, блоков и модулей</p>
+              <p class="intro__description description">производство и&nbsp;монтаж, поставка комплектующих, блоков и&nbsp;модулей</p>
               <a class="intro__button button button--intro" href="#form">
                 <span class="intro__button-long-text">Получить бесплатную консультацию</span>
                 <span class="intro__button-short-text">бесплатная консультация</span>
@@ -99,28 +99,28 @@
                   <svg width="35" height="35" viewBox="0 0 35 35" fill="none">
                     <use href="#stopwatch"></use>
                   </svg>
-                  <p class="description">Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
+                  <p class="description">Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и&nbsp;доставлять заказы плат и&nbsp;комплектующих в&nbsp;самые короткие сроки</p>
                 </li>
                 <li class="advantage">
                   <h3 class="title">Крупные поставщики</h3>
                   <svg width="35" height="35" viewBox="0 0 35 35" fill="none">
                     <use href="#hired"></use>
                   </svg>
-                  <p class="description">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей продукции.</p>
+                  <p class="description">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с&nbsp;такими компаниями обеспечивает хорошее качество нашей продукции.</p>
                 </li>
                 <li class="advantage advantage--modify">
                   <h3 class="title">Полная конфиденциальность</h3>
                   <svg width="35" height="35" viewBox="0 0 35 35" fill="none">
                     <use href="#detective"></use>
                   </svg>
-                  <p class="description">По желанию клиента  мы обеспечиваем полную конфиденциальность.</p>
+                  <p class="description">По&nbsp;желанию клиента мы&nbsp;обеспечиваем полную конфиденциальность.</p>
                 </li>
                 <li class="advantage advantage--modify">
                   <h3 class="title">Персонализация стоимости</h3>
                   <svg width="35" height="35" viewBox="0 0 35 35" fill="none">
                     <use href="#tag"></use>
                   </svg>
-                  <p class="description">Мы  подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.</p>
+                  <p class="description">Мы&nbsp;подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту&nbsp;цену, которая Вас устраивает.</p>
                 </li>
               </ul>
             </div>
@@ -129,12 +129,12 @@
             <div class="container">
               <div class="about__container">
                 <div class="about__wrapper">
-                  <h2 class="title">О компании</h2>
+                  <h2 class="title">О&nbsp;компании</h2>
                   <div class="about__descriptions">
-                    <p class="description">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
-                    <p class="description">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. <span data-hidden-text="mobile">Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</span></p>
-                    <p class="description" data-hidden-text="hidden">Smart Device - это команда профессионалов. Через нас прошло более 1 000 000 клиентов, 70% из которых продолжают сотрудничество по сей день. На данный момент насчитывается более 14 офисов по всей стране и 20 городов присутствия.</p>
-                    <p class="description" data-hidden-text="hidden">Мы стремимся к постоянному развитию и повышению уровня качества продукции, производимой внутри компании. Использование инновационных технологий помогает экономить деньги и время наших клиентов</p>
+                    <p class="description">Мы&nbsp;поставляем электронные комплектующие, производим печатные платы и&nbsp;предоставляем мировые технологии с&nbsp;1997 года. Выполняем срочные заказы и&nbsp;пилотные образцы до&nbsp;10 дней.</p>
+                    <p class="description">Наши поставщики&nbsp;&mdash; мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. <span data-hidden-text="mobile">Печатные платы и&nbsp;комплектующие Service Devices применяются на&nbsp;предприятиях Российских Железных Дорог (РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</span></p>
+                    <p class="description" data-hidden-text="hidden">Smart Device&nbsp;&mdash; это команда профессионалов. Через нас прошло более 1&nbsp;000&nbsp;000 клиентов, 70% из&nbsp;которых продолжают сотрудничество по&nbsp;сей день. На&nbsp;данный момент насчитывается более 14 офисов по&nbsp;всей стране и&nbsp;20 городов присутствия.</p>
+                    <p class="description" data-hidden-text="hidden">Мы&nbsp;стремимся к&nbsp;постоянному развитию и&nbsp;повышению уровня качества продукции, производимой внутри компании. Использование инновационных технологий помогает экономить деньги и&nbsp;время наших клиентов</p>
                   </div>
                   <button class="button button--about" data-button-about="show">Подробнее</button>
                 </div>
@@ -149,8 +149,8 @@
             <div class="container">
               <div class="goods__container">
                 <h2 class="goods__title title">
-                  <span class="goods__title goods__title--long">Smart Device предлагает следующие товары и услуги</span>
-                  <span class="goods__title goods__title--short">Товары и услуги Smart Device</span>
+                  <span class="goods__title goods__title--long">Smart Device предлагает следующие товары и&nbsp;услуги</span>
+                  <span class="goods__title goods__title--short">Товары и&nbsp;услуги Smart Device</span>
                 </h2>
                 <ul class="goods__list list">
                   <li class="goods__item">
@@ -192,9 +192,9 @@
                   <img class="questions__image" src="./img/peper-airplane/paper-airplane.png" srcset="./img/peper-airplane/paper-airplane@2x.png 2x" width="510" height="285" alt="Бумажный самолетик">
                 </picture>
                 <div class="questions__wrapper">
-                  <h2 class="questions__title title">Остались вопросы? Задайте их нам!</h2>
-                  <p class="questions__description description">Мы проконсультируем Вас бесплатно</p>
-                  <form  class="questions__form question-form" action="#">
+                  <h2 class="questions__title title">Остались вопросы? Задайте их&nbsp;нам!</h2>
+                  <p class="questions__description description">Мы&nbsp;проконсультируем Вас бесплатно</p>
+                  <form  class="questions__form question-form" action="#" data-form-validate>
                     <label class="question-form__label question-form__label--name">
                       <span class="visually-hidden">Выше имя</span>
                       <input id="name" name="name" type="text" placeholder="Имя" required>
@@ -207,12 +207,12 @@
                       <span class="visually-hidden">Вопрос который Вы хотите нам задать</span>
                       <textarea id="question" name="question" cols="30" rows="6" placeholder="Ваш вопрос"></textarea>
                     </label>
-                    <button class="question-form__button button button--question" type="button">Задать вопрос</button>
                     <label class="question-form__personal-data description" for="personal-data">
-                      <input class="visually-hidden" type="checkbox" id="personal-data" name="personal-data">
+                      <input class="visually-hidden" type="checkbox" id="personal-data" name="personal-data" required>
                       <span class="question-form__custom-checkbox"></span>
-                      <span class="question-form__personal-description description">Я согласен на обработку  персональных данных</span>
+                      <span class="question-form__personal-description description">Я&nbsp;согласен на&nbsp;обработку персональных данных</span>
                     </label>
+                    <button class="question-form__button button button--question" type="submit">Задать вопрос</button>
                   </form>
                 </div>
               </div>
@@ -259,7 +259,7 @@
             <div class="nav__wrapper" data-menu="nav">
               <ul class="nav__list list">
                 <li>
-                  <a class="nav__link" href="#">О Компании</a>
+                  <a class="nav__link" href="#">О&nbsp;Компании</a>
                 </li>
                 <li>
                   <a class="nav__link" href="#">Продукты</a>
@@ -288,7 +288,7 @@
             <h3 class="nav__title nav__title--closed title" data-button-menu="contacts">Наш офис</h3>
             <ul class="nav__list nav__wrapper list" data-menu="contacts">
               <li>
-                <address class="nav__link">г. Мытищи, Олимпийский проспект,<br> д.10</address>
+                <address class="nav__link">г.&nbsp;Мытищи, Олимпийский проспект,<br> д.10</address>
               </li>
               <li>
                 <a class="nav__link" href="tel:+74955894050">+7 (495) 589-40-50</a>
@@ -308,12 +308,12 @@
     <div class="pop-up" data-popup>
       <div class="pop-up__wrapper">
         <h2 class="pop-up__title title">Закажите звонок</h2>
-        <p class="pop-up__description description">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
-        <a class="pop-up__button button button--pop-up"  data-popup-button="close"></a>
-        <form  class="pop-up__form question-form" action="#">
+        <p class="pop-up__description description">Оставьте контакты, мы&nbsp;проконсультируем вас бесплатно в&nbsp;удобное время</p>
+        <a class="pop-up__button button button--pop-up" href="#" tabindex="0" data-popup-button="close"></a>
+        <form  class="pop-up__form question-form" action="#" data-form-validate>
           <label class="question-form__label question-form__label--name">
             <span class="visually-hidden">Выше имя</span>
-            <input id="name-pop" name="name-pop-up" type="text" data-popup-name placeholder="Имя" required>
+            <input id="name-pop" name="name-pop-up" type="text" data-popup-name placeholder="Имя" minlength="1" required>
           </label>
           <label class="question-form__label question-form__label--phone" data-phone-validate>
             <span class="visually-hidden">Выш номер телефона</span>
@@ -323,13 +323,20 @@
             <span class="visually-hidden">Вопрос который Вы хотите нам задать</span>
             <textarea id="question-pop-up" name="question-pop-up" cols="30" rows="6" placeholder="Ваш вопрос"></textarea>
           </label>
-          <button class="question-form__button button button--question" type="button">Отправить</button>
           <label class="question-form__personal-data description" for="personal-data-popup">
-            <input class="visually-hidden" type="checkbox" id="personal-data-popup" name="personal-data-popup">
+            <input class="visually-hidden" type="checkbox" id="personal-data-popup" name="personal-data-popup" required>
             <span class="question-form__custom-checkbox"></span>
-            <span class="question-form__personal-description description">Я согласен на обработку  персональных данных</span>
+            <span class="question-form__personal-description description">Я&nbsp;согласен на&nbsp;обработку персональных данных</span>
           </label>
+          <button class="question-form__button button button--question" type="submit">Отправить</button>
         </form>
+      </div>
+    </div>
+
+    <div class="success" data-success>
+      <div class="success__wrapper">
+        <h1 class="success__title">Ваши контакты уже у нас!</h1>
+        <p class="success__description">Мы свяжимся с Вами в самое ближайшее время.</p>
       </div>
     </div>
 
