--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </a>
               </div>
             </div>
-            <button class="header__button button button--modal" type="button" data-popup-button>Заказать звонок</button>
+            <a class="header__button button button--modal" href="#form" data-popup-button>Заказать звонок</a>
           </div>
         </div>
       </header>
@@ -306,7 +306,7 @@
     </div>
 
     <div class="pop-up" data-popup>
-      <div class="pop-up__wrapper">
+      <div class="pop-up__wrapper" data-popup-modal>
         <h2 class="pop-up__title title">Закажите звонок</h2>
         <p class="pop-up__description description">Оставьте контакты, мы&nbsp;проконсультируем вас бесплатно в&nbsp;удобное время</p>
         <a class="pop-up__button button button--pop-up" href="#" tabindex="0" data-popup-button="close"></a>
